Update seguridad y persistencia

--- a/Practica2/src/main/resources/application.properties
+++ b/Practica2/src/main/resources/application.properties
@@ -16,4 +16,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/dbconsole
 
 #Permite activar la carga de los archivos vía archivo data-xxx.sql de forma automatica.
-spring.datasource.platform=h2
+spring.sql.init.platform=h2
+# spring.datasource.platform=h2 deprecated
+
+#Configurando la información sobre Spring Security
+#Indicando el usuario y password.
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=USER,ADMIN
