fixed login and roles bug

--- a/Practica2/src/main/resources/application.properties
+++ b/Practica2/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 #Información sobre JPA para la creación.
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 #Configuración para habilitar la consola de H2
@@ -21,6 +21,10 @@ spring.sql.init.platform=h2
 
 #Configurando la información sobre Spring Security
 #Indicando el usuario y password.
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=USER,ADMIN
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+#spring.security.user.roles=USER,ADMIN
+
+#Configuración del servidor Spring Boot Admin.
+spring.boot.admin.client.url=http://localhost:8081
+spring.boot.admin.client.instance.name=Aplicacion Demo Spring Boot
