--- a/Practica4/Servidor-Broker/build.gradle
+++ b/Practica4/Servidor-Broker/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'mysql:mysql-connector-java'
 
     //Administrador de plantillas
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
@@ -49,9 +50,6 @@ dependencies {
 
     //Cola de mensajeria
     implementation group: 'org.apache.activemq', name: 'activemq-all', version: '5.4.2'
-
-    //Solo para probar antes de Docker
-    runtimeOnly 'com.h2database:h2'
 
     implementation 'com.google.code.gson:gson:2.8.7'
 
