--- a/Practica4/Servidor-Broker/src/main/resources/application.properties
+++ b/Practica4/Servidor-Broker/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:Notificacion_sensores}?useSSL=false
+
+spring.datasource.username=${DB_USER:db}
+spring.datasource.password=${DB_PASSWORD:12345678}
+
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+spring.jpa.show-sql = true
