--- a/Practica4/docker-compose.yml
+++ b/Practica4/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     networks:
       - red-app
     command: bash -c "apt-get update && apt-get install -y wget"
+    command: bash -c "echo hola"
     command: bash -c"wget -qO- https://raw.githubusercontent.com/eficode/wait-for/v2.1.3/wait-for | sh -s -- app-web:3306 -- echo success"
     command: bash -c "cd /app && java -jar Cliente.jar 2"
 
