--- a/Practica4/Servidor-Broker/build.gradle
+++ b/Practica4/Servidor-Broker/build.gradle
@@ -32,8 +32,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     //runtimeOnly 'mysql:mysql-connector-java'
 
-
-
     //Web
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
@@ -53,6 +51,12 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.7'
 
+    //Jquery y WebSocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:webjars-locator-core'
+    implementation 'org.webjars:sockjs-client:1.0.2'
+    implementation 'org.webjars:stomp-websocket:2.3.3'
+    implementation 'org.webjars:jquery:3.1.1-1'
 }
 
 test {
