--- a/Proyecto-Final/WebApp/build.gradle
+++ b/Proyecto-Final/WebApp/build.gradle
@@ -18,6 +18,11 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2021.0.0")
+}
+
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -29,6 +34,19 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
+    //librería necesaria para utilizar el servidor para centralizar la configuracion
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.0'
+    //librería log ELK
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
