--- a/Proyecto-Final/WebApp/src/main/resources/application.properties
+++ b/Proyecto-Final/WebApp/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name= cliente-web
+#spring.cloud.config.uri=
+spring.config.import=optional:configserver:http://${CONFIG-SERVER:localhost}:8888/
+#spring.config.import=optional:servidor-configuracion:
+#default uri es localhost:8888
 
