--- a/Proyecto-Final/WebApp/build.gradle
+++ b/Proyecto-Final/WebApp/build.gradle
@@ -29,12 +29,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.session:spring-session-core'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
     //librería necesaria para utilizar el servidor para centralizar la configuracion
