--- a/Proyecto-Final/eventos-microservice/build.gradle
+++ b/Proyecto-Final/eventos-microservice/build.gradle
@@ -17,11 +17,13 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.2'
-	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'mysql:mysql-connector-java'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'joda-time:joda-time:2.9.9'
 
 	implementation 'com.google.code.gson:gson:2.8.9'
 
@@ -33,7 +35,6 @@ dependencies {
 
 	//librería log ELK
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
-
 }
 
 dependencyManagement {
