--- a/Proyecto-Final/docker-compose.yml
+++ b/Proyecto-Final/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     depends_on:
       - elasticsearch
       - logstash
-    #  - user-microservice
+      - user-microservice
 
   servidor-configuracion:
     build:
@@ -48,7 +48,7 @@ services:
     environment:
       - EUREKA-SERVER=servidor-eureka
       - spring_profiles_active=nube
-      - LOGSTASH-SERVER=localhost
+      - LOGSTASH-SERVER=logstash
     ports: 
       - 8888:8888
     depends_on:
@@ -83,67 +83,69 @@ services:
     depends_on:
       - servidor-eureka
 
-  # app-web:      
-  #   build: 
-  #     context: WebApp/
-  #     dockerfile: Dockerfile
-  #   restart: always
-  #   ports:          
-  #     - 8181:8181
-  #   environment:    
-  #     - NOMBRE_APP=Prueba
-  #     - CONFIG-SERVER=servidor-configuracion
-  #     - EUREKA-SERVER=servidor-eureka
-  #     - LOGSTASH-SERVER=logstash
-  #   depends_on:   
-  #     - servidor-perimetral
-  #     - user-microservice
-  #     - mail-microservice
-  #   networks:
-  #     - red-app
+  app-web:      
+    build: 
+      context: WebApp/
+      dockerfile: Dockerfile
+    restart: always
+    ports:          
+      - 8181:8181
+    environment:    
+      - NOMBRE_APP=Prueba
+      - CONFIG-SERVER=servidor-configuracion
+      - EUREKA-SERVER=servidor-eureka
+      - LOGSTASH-SERVER=logstash
+    depends_on:   
+      - servidor-perimetral
+      - user-microservice
+      - mail-microservice
+    networks:
+      - red-app
 
-  # user-microservice:
-  #   build: 
-  #     context: usuarios-microservice/
-  #     dockerfile: Dockerfile 
-  #   restart: always
-  #   environment:
-  #     - CONFIG-SERVER=servidor-configuracion
-  #     - EUREKA-SERVER=servidor-eureka
-  #     - LOGSTASH-SERVER=logstash
-  #   depends_on:
-  #     - user-db
-  #   networks:
-  #     - red-app
+  user-microservice:
+    build: 
+      context: usuarios-microservice/
+      dockerfile: Dockerfile 
+    restart: always
+    environment:
+      - CONFIG-SERVER=servidor-configuracion
+      - EUREKA-SERVER=servidor-eureka
+      - LOGSTASH-SERVER=logstash
+      - DB_HOST=user-db
+    depends_on:
+      - user-db
+    networks:
+      - red-app
 
       
-  # events-microservice:
-  #   build: 
-  #     context: eventos-microservice/
-  #     dockerfile: Dockerfile
-  #   restart: always
-  #   environment:
-  #     - CONFIG-SERVER=servidor-configuracion
-  #     - EUREKA-SERVER=servidor-eureka
-  #     - LOGSTASH-SERVER=logstash  
-  #   depends_on:
-  #     - events-db
-  #   networks:
-  #     - red-app
+  events-microservice:
+    build: 
+      context: eventos-microservice/
+      dockerfile: Dockerfile
+    restart: always
+    environment:
+      - CONFIG-SERVER=servidor-configuracion
+      - EUREKA-SERVER=servidor-eureka
+      - LOGSTASH-SERVER=logstash  
+      - DB_HOST=events-db
+    depends_on:
+      - events-db
+    networks:
+      - red-app
     
-  # mail-microservice:
-  #   build: 
-  #     context: mail-microservice/
-  #     dockerfile: Dockerfile 
-  #   restart: always
-  #   environment:
-  #     - CONFIG-SERVER=servidor-configuracion
-  #     - EUREKA-SERVER=servidor-eureka
-  #     - LOGSTASH-SERVER=logstash
-  #   depends_on:
-  #     - mail-db
-  #   networks:
-  #     - red-app
+  mail-microservice:
+    build: 
+      context: mail-microservice/
+      dockerfile: Dockerfile 
+    restart: always
+    environment:
+      - CONFIG-SERVER=servidor-configuracion
+      - EUREKA-SERVER=servidor-eureka
+      - LOGSTASH-SERVER=logstash
+    depends_on:
+      - mail-db
+    networks:
+      - red-app
     
   user-db:
     image: mysql:5.7.26
