--- a/Proyecto-Final/servidor-perimetral/build.gradle
+++ b/Proyecto-Final/servidor-perimetral/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.2'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+	id 'org.springframework.boot' version '2.6.2'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'java'
 }
 
 group = 'edu.pucmm'
@@ -9,36 +9,29 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-    mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
+	mavenCentral()
 }
 
 ext {
-    set('springCloudVersion', "2021.0.0")
+	set('springCloudVersion', "2021.0.0")
 }
 
 dependencies {
-    //
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.2'
-    //Librería para la centralizacion de la configuracion.
-    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.0'
-    //Librería de Eureka Cliente
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
-    //Librería de Zuul para servicio perimetral o gateway
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.2.10.RELEASE'
-    //librería log ELK
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
-    testImplementation('org.springframework.boot:spring-boot-starter-test:2.6.2') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 test {
-    useJUnitPlatform()
+	useJUnitPlatform()
 }
