microservice app name bug

--- a/Proyecto-Final/eventos-microservice/src/main/resources/application.properties
+++ b/Proyecto-Final/eventos-microservice/src/main/resources/application.properties
@@ -28,6 +28,6 @@ management.endpoints.web.exposure.include=*
 logging.pattern.console=%d{HH:mm:ss} [%t] %-5level %logger{36} - %msg%n
 
 #spring.cloud.config.enabled=false
-spring.application.name= eventos-microservicio
+spring.application.name= eventos-microservice
 spring.config.import=configserver:http://${CONFIG-SERVER:localhost}:8888/
 spring.cloud.config.fail-fast=true
